plugins {
    java
    application
    id("me.champeau.jmh") version "0.7.2"
}

group = "knights"
version = "1.0"

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType<Test> {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
}

dependencies {
    // App
    implementation("com.google.code.gson:gson:2.10.1")

    // Tests
    testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")

    // JMH (benchmarks src/jmh/java/**)
    jmh("org.openjdk.jmh:jmh-core:1.37")
    jmhAnnotationProcessor("org.openjdk.jmh:jmh-generator-annprocess:1.37")
}

application {
    mainClass.set("knights.Main")
}

tasks.jar {
    manifest {
        attributes["Main-Class"] = "knights.Main"
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from(configurations.runtimeClasspath.get().map { if (it.isDirectory) it else zipTree(it) })
}

tasks.withType<JavaCompile> {
    options.compilerArgs.addAll(listOf("-Xlint:unchecked", "-Xlint:deprecation"))
}

// Enable benchmarking
jmh {
    warmupIterations.set(3)
    iterations.set(5)
    fork.set(1)
    benchmarkMode.set(listOf("Throughput"))
    timeUnit.set("ms")
    // includes.set(listOf("knights\\.benchmark\\..*"))
    // resultFormat.set("CSV")
    // result.set(layout.buildDirectory.file("reports/jmh/results.csv").get().asFile.path)
}